language_tests/outputs/invalid/printf_dangling_percent_literal.out
error: printf format string ends with dangling '%'
 -> language_tests/source_files/invalid/printf_dangling_percent_literal.tr:2:11
	    printf("value=%")
	           ^^^^^^^^^
